Update reqs and ignore

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,19 @@
-sqlalchemy
-jinja2
-markupsafe
-libvirt-python 
-pymongo
-bottle
-#pefile
-django>=1.7
-chardet
-pygal
-clamd
-pycrypto
-rarfile 
-jsbeautifier
-dpkt
-nose
-dnspython
-pytz
-requests
-python-magic
-geoip
-pillow
-elasticsearch
-java-random
-python-whois
-bs4
-pefile2==1.2.11
-git+https://github.com/crackinglandia/pype32.git
-git+https://github.com/jsocol/django-ratelimit
-git+https://github.com/kbandla/pydeep.git
-pyvmomi>=6.0
+bson==0.5.8
+certifi==2019.3.9
+chardet==3.0.4
+Django==1.11.20
+dnspython==1.16.0
+future==0.17.1
+idna==2.8
+image==1.5.27
+Jinja2==2.10.1
+MarkupSafe==1.1.1
+pefile==2019.4.18
+Pillow==6.0.0
+pycrypto==2.6.1
+python-dateutil==2.8.0
+pytz==2019.1
+requests==2.21.0
+six==1.12.0
+SQLAlchemy==0.9.9
+urllib3==1.24.3
